--- a/gradle.properties
+++ b/gradle.properties
@@ -16,13 +16,13 @@
 jmhOutputPath=build/reports/jmh/human-readable-output.txt
 jmhJsonOutputPath=build/reports/jmh/results.json
 jmhIncludeRegex=.*
-systemProp.defaultFlinkVersions=1.17
+systemProp.defaultFlinkVersions=
 systemProp.knownFlinkVersions=1.15,1.16,1.17
 systemProp.defaultHiveVersions=2
 systemProp.knownHiveVersions=2,3
-systemProp.defaultSparkVersions=3.5
+systemProp.defaultSparkVersions=3.3
 systemProp.knownSparkVersions=3.2,3.3,3.4,3.5
-systemProp.defaultScalaVersion=2.12
+systemProp.defaultScalaVersion=2.13
 systemProp.knownScalaVersions=2.12,2.13
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx1024m
