Add input/output files for byte arrays

--- a/build.gradle
+++ b/build.gradle
@@ -339,6 +339,14 @@ project(':iceberg-core') {
         srcDirs = []
       }
     }
+    test {
+      scala {
+        srcDirs = ['src/test/scala', 'src/test/java']
+      }
+      java {
+        srcDirs = []
+      }
+    }
   }
 
   dependencies {
